fixing post-title spacing

--- a/css/main.css
+++ b/css/main.css
@@ -143,6 +143,10 @@ FRONT PAGE
   margin-bottom: 15px;
 }
 
+.post-title {
+  margin-bottom: 25px;
+}
+
 /**********
 POST
 **********/
